@@ -579,6 +579,7 @@ All (GUI):
 - Add missing styles support to wxWindow XRC hanlder (Steffen Olszewski).
 - Allow specifying all wxFlexGridSizer parameters in XRC (Steffen Olszewski).
 - Close wxLogWindow automatically if it's the last remaining top level window.
+- Implement clipping for wxSVGFileDC (Steve Benbow).
 
 wxGTK:
 
